examples/reference/linker_regions_phase6_unknown_region.err
Assembly failed:
9: ERROR [asm202]
    9 | .place code in nowhere
 ^
ERROR: Unknown region in placement directive: nowhere
